# iot-soc-smart-irrigation

./: .gitignore  CLAUDE.md  CLAUDE_PHASE4_PLAN.md  CMakeLists.txt  DIAGRAM_FLUJO_SIMPLE.txt  ESTADO_ACTUAL_IMPLEMENTACION.md  EXTERNAL_DRIVERS.md  FLUJO_EJECUTAR_COMANDO.md  IMPLEMENTACION_COMPLETADA_PHASE5.md  Logica_de_riego.md  MIGRATION_MAP.md  OPTIMIZATION_PLAN.md  PLAN_EJECUCION_IRRIGATION_CONTROLLER.md  PLAN_IMPLEMENTACION_DETALLADO.md  PROJECT.md  README-NATS.md  README.md  RESUMEN_IMPLEMENTACION.md  RIEGO_AUTOMATICO_ESQUEMA.md  detalles_implementacion_nva_arqutectura.md  docker-compose.yml  nats-server.conf  partitions.csv  sdkconfig.defaults
components/application/: CMakeLists.txt
components/application/use_cases/: control_irrigation.c  control_irrigation.h  evaluate_irrigation.h  offline_irrigation.c  offline_irrigation.h  process_mqtt_commands.c  process_mqtt_commands.h  publish_sensor_data.c  publish_sensor_data.h  read_soil_sensors.c  read_soil_sensors.h
components/device_config/: device_config.c  device_config.h
components/domain/: CMakeLists.txt
components/domain/entities/: irrigation.h  mqtt_connection.h  sensor.h
components/domain/services/: device_config_service.c  device_config_service.h  device_serializer.h  irrigation_logic.c  irrigation_logic.h  offline_mode_logic.c  offline_mode_logic.h  safety_manager.c  safety_manager.h
components/domain/value_objects/: ambient_sensor_data.h  complete_sensor_data.h  device_info.h  device_registration_message.h  irrigation_command.h  irrigation_status.h  safety_limits.h  soil_sensor_data.h  system_mode.h
components/http_server/: CMakeLists.txt  http_server.c  http_server.h
components/infrastructure/: CMakeLists.txt  Kconfig.projbuild
components/infrastructure/adapters/: json_device_serializer.c  json_device_serializer.h  shared_resource_manager.c  shared_resource_manager.h
components/infrastructure/adapters/http_adapter/: CMakeLists.txt
components/infrastructure/adapters/http_adapter/include/: http_adapter.h
components/infrastructure/adapters/http_adapter/src/: http_adapter.c
components/infrastructure/adapters/http_adapter/src/http/: server.c  server.h
components/infrastructure/adapters/http_adapter/src/http/endpoints/: ping.c  ping.h  temperature_humidity.c  temperature_humidity.h  whoami.c  whoami.h
components/infrastructure/adapters/http_adapter/src/http/middleware/: logging_middleware.c  logging_middleware.h  middleware_manager.c  middleware_manager.h
components/infrastructure/adapters/mqtt_adapter/: Kconfig
components/infrastructure/adapters/mqtt_adapter/include/: mqtt_adapter.h  mqtt_client_manager.h
components/infrastructure/adapters/mqtt_adapter/src/: mqtt_adapter.c  mqtt_client_manager.c
components/infrastructure/adapters/wifi_adapter/: CMakeLists.txt  Kconfig
components/infrastructure/adapters/wifi_adapter/include/: boot_counter.h  wifi_adapter.h  wifi_connection_manager.h  wifi_prov_manager.h
components/infrastructure/adapters/wifi_adapter/src/: boot_counter.c  wifi_adapter.c  wifi_connection_manager.c  wifi_prov_manager.c
components/infrastructure/drivers/dht_sensor/: CMakeLists.txt
components/infrastructure/drivers/dht_sensor/include/: dht_sensor.h
components/infrastructure/drivers/dht_sensor/src/: dht_sensor.c
components/infrastructure/drivers/led_indicator/: led_indicator_driver.h
components/infrastructure/drivers/soil_moisture/: CMakeLists.txt  soil_moisture_driver.h
components/infrastructure/drivers/soil_moisture/include/: soil_moisture_driver.h
components/infrastructure/drivers/soil_moisture/src/: soil_moisture_driver.c
components/infrastructure/drivers/valve_control/: CMakeLists.txt
components/infrastructure/drivers/valve_control/include/: valve_control_driver.h
components/infrastructure/drivers/valve_control/src/: valve_control_driver.c
components/irrigation_controller/: CMakeLists.txt  Kconfig  irrigation_controller.c  irrigation_controller.h
components/irrigation_controller/drivers/offline_mode/: offline_mode_driver.c  offline_mode_driver.h
components/irrigation_controller/drivers/safety_watchdog/: safety_watchdog.c  safety_watchdog.h
components/irrigation_controller/drivers/valve_driver/: valve_driver.c  valve_driver.h
components/mqtt_client/: Kconfig  mqtt_adapter.c  mqtt_client_manager.h
components/notification_service/: CMakeLists.txt  Kconfig  notification_service.c  notification_service.h
components/sensor_reader/: CMakeLists.txt  sensor_reader.c  sensor_reader.h
components/sensor_reader/drivers/dht22/: dht.c
components/sensor_reader/drivers/moisture_sensor/: moisture_sensor.c  moisture_sensor.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
components_new/device_config/: CMakeLists.txt  device_config.c  device_config.h
components_new/http_server/: CMakeLists.txt  http_server.c
components_new/mqtt_client/: CMakeLists.txt  mqtt_client.c  mqtt_client.h
components_new/sensor_reader/: CMakeLists.txt  sensor_reader.c  sensor_reader.h
components_new/sensor_reader/drivers/dht22/: dht.h
components_new/sensor_reader/drivers/moisture_sensor/: moisture_sensor.c  moisture_sensor.h
components_new/system_monitor/: CMakeLists.txt  system_monitor.h
components_new/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
docs/: IRRIGATION_CONTROL_IMPLEMENTATION_PLAN.md  wifi_connectivity_implementation_plan.md
docs/user_stories/: 03_wifi_connectivity.md  04_http_server.md  05_mqtt_ws.md
future_components/irrigation_controller.disabled/: CMakeLists.txt  irrigation_controller.h
include/: common_types.h
main/: CMakeLists.txt  iot-soc-smart-irrigation.c
