idf_component_register(SRCS "adapters/json_device_serializer.c"
                            "adapters/wifi_adapter/src/wifi_adapter.c"
                            "adapters/wifi_adapter/src/wifi_prov_manager.c"
                            "adapters/wifi_adapter/src/boot_counter.c"
                            "adapters/wifi_adapter/src/wifi_connection_manager.c"
                            "adapters/http_adapter/src/http_adapter.c"
                            "adapters/http_adapter/src/http/server.c"
                            "adapters/http_adapter/src/http/endpoints/whoami.c"
                            "adapters/http_adapter/src/http/middleware/logging_middleware.c"
                            "adapters/http_adapter/src/http/middleware/middleware_manager.c"
                    INCLUDE_DIRS "."
                    "adapters"
                    "adapters/wifi_adapter/include"
                    "adapters/http_adapter/include"
                    "drivers"
                    "network"
                    "persistence"
                    REQUIRES domain application wifi_provisioning protocomm esp_wifi nvs_flash esp_event esp_netif esp_timer esp_http_server)