idf_component_register(SRCS "adapters/json_device_serializer.c"
                            "adapters/wifi_adapter/src/wifi_adapter.c"
                            "adapters/wifi_adapter/src/wifi_prov_manager.c"
                            "adapters/wifi_adapter/src/boot_counter.c"
                            "adapters/wifi_adapter/src/wifi_connection_manager.c"
                            "adapters/http_adapter/src/http_adapter.c"
                            "adapters/http_adapter/src/http/server.c"
                            "adapters/http_adapter/src/http/endpoints/whoami.c"
                            "adapters/http_adapter/src/http/endpoints/temperature_humidity.c"
                            "adapters/http_adapter/src/http/endpoints/ping.c"
                            "adapters/http_adapter/src/http/middleware/logging_middleware.c"
                            "adapters/http_adapter/src/http/middleware/middleware_manager.c"
                            "adapters/mqtt_adapter/src/mqtt_adapter.c"
                            "adapters/mqtt_adapter/src/mqtt_client_manager.c"
                            "adapters/shared_resource_manager.c"
                            "drivers/dht_sensor/src/dht_sensor.c"
                            "drivers/soil_moisture/src/soil_moisture_driver.c"
                            "drivers/valve_control/src/valve_control_driver.c"
                    INCLUDE_DIRS "."
                    "adapters"
                    "adapters/wifi_adapter/include"
                    "adapters/http_adapter/include"
                    "adapters/mqtt_adapter/include"
                    "drivers"
                    "drivers/dht_sensor/include"
                    "drivers/soil_moisture/include"
                    "drivers/valve_control/include"
                    "network"
                    "persistence"
                    REQUIRES domain application wifi_provisioning protocomm esp_wifi nvs_flash esp_event esp_netif esp_timer esp_http_server mqtt json esp_driver_gpio driver)